...
      category: {
        _type: "Category",
        name: "Musicals",
        id: 8,
        slug: "musicals"
      },
      displayName: "Little Shop of Horrors",
      endDate: "2025-05-31",
      genreTags: ["Musical"],
      heroImageUrl:
        "http://localhost:3000/assets/Little_Shop_of_Horrors_-_Hero.jpg",
      id: 24608,
      images: {
...
